add_executable(1_balance_release 
"1_balance_release.cpp" 
"1_balance_release.h" 
"ModifiedTicTacToe/ModifiedTicTacToe.h" 
"ModifiedTicTacToe/ModifiedTicTacToe.cpp" 
"GameProcess/GameProcess.h" 
"GameProcess/GameProcess.cpp" 
"GameAnalysis/GameAnalysis.h" 
"GameAnalysis/GameAnalysis.cpp" 
"MushroomGlade/MushroomGlade.h" 
"MushroomGlade/MushroomGlade.cpp" 
"MushroomGlade4x6/MushroomGlade4x6.h" 
"MushroomGlade4x6/MushroomGlade4x6.cpp"
"MushroomGlade3x4x4/MushroomGlade3x4x4.h" 
"MushroomGlade3x4x4/MushroomGlade3x4x4.cpp" 
"MushroomGlade3x4x6/MushroomGlade3x4x6.h" 
"MushroomGlade3x4x6/MushroomGlade3x4x6.cpp" 
"MushroomGlade5x4x6/MushroomGlade5x4x6.h" 
"MushroomGlade5x4x6/MushroomGlade5x4x6.cpp" 
"MushroomGlade3x6x6/MushroomGlade3x6x6.h" 
"MushroomGlade3x6x6/MushroomGlade3x6x6.cpp" 
"MushroomGlade5x6x6/MushroomGlade5x6x6.h" 
"MushroomGlade5x6x6/MushroomGlade5x6x6.cpp" 
"GameBot/GameBot.h" 
"GameBot/GameBot.cpp" 
"PlayingGame/PlayingGame.h" 
"PlayingGame/PlayingGame.cpp"
"PlayingTwoPlayersGame/PlayingTwoPlayersGame.h" 
"PlayingTwoPlayersGame/PlayingTwoPlayersGame.cpp") 
